style.css
/* ... */
.portfolio__blocks {
  margin: 1.8rem 4rem 0rem 4rem;
  height: 620px;
  overflow: hidden;
}

#blocks {
  -webkit-box-shadow: inset 0 0 0 0 rgba(255, 255, 255, 0);
  -moz-box-shadow: inset 0 0 0 0 rgba(255, 255, 255, 0);
  box-shadow: inset 0 0 0 0 rgba(255, 255, 255, 0);
}

.bordered {
  -webkit-box-shadow: inset 0 0 0 0.5rem #F06C64;
  -moz-box-shadow: inset 0 0 0 0.5rem #F06C64;
  box-shadow: inset 0 0 0 0.5rem #F06C64;
}

.blocks__block {
  width: 220px;
  height: 186px;
  margin-bottom: 2rem;
  order: 2;
  transition: 0.5s ease-in-out;
}
.blocks__block span {
  display: none;
}

.project {
  vertical-align: middle;
  background-size: 100%;
  background-position: 50% 50%;
  background-repeat: no-repeat;
}

.thumb1 {
  background-image: url(assets/images/portfolio/1.png);
}

.thumb2 {
  background-image: url(assets/images/portfolio/2.png);
}

.thumb3 {
  background-image: url(assets/images/portfolio/3.png);
}

.thumb4 {
  background-image: url(assets/images/portfolio/4.png);
}

.thumb5 {
  background-image: url(assets/images/portfolio/5.png);
}

.thumb6 {
  background-image: url(assets/images/portfolio/6.png);
}

.thumb7 {
  background-image: url(assets/images/portfolio/7.png);
}

.thumb8 {
  background-image: url(assets/images/portfolio/8.png);
}

.thumb9 {
  background-image: url(assets/images/portfolio/9.png);
}

.thumb10 {
  background-image: url(assets/images/portfolio/10.png);
}

.thumb11 {
  background-image: url(assets/images/portfolio/11.png);
}

.thumb12 {
  background-image: url(assets/images/portfolio/12.png);
}

.o1 {
  order: 1;
}

.about-us {
  background: #f2f2f2;
  border-bottom: solid 5.5px #ffffff;
  height: 728px;
}

.employees {
  margin: 4.3rem 2rem 0 4rem;
}

.employee {
  flex: 0 0 33.3333%;
}

.employee__content {
  margin-top: 0.7rem;
}
.employee__content h3 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  line-height: 3.2rem;
  letter-spacing: 0.02em;
}

.employee__text {
  padding-right: 2rem;
}
.employee__text p {
  font-size: 1.2rem;
  line-height: 2.5rem;
  text-align: justify;
}

.employee__social-links {
  margin-top: 2rem;
  list-style: none;
  padding: 0;
  display: flex;
}

.contacts__wrapper {
  padding-top: 7rem;
  width: 940px;
}

.contacts {
  background-color: #F06C64;
  border-bottom: 6px solid #EA676B;
  height: 648.5px;
}

.contacts__title {
  font-size: 3rem;
  letter-spacing: 0.01em;
  line-height: 1.2rem;
  font-weight: 900;
  margin: 0;
  color: #f0d8d9;
  word-spacing: -0.5pt;
}

.contacts__description {
  line-height: 3rem;
  padding-top: 3rem;
  color: #f0d8d9;
  letter-spacing: -0.01em;
  padding-right: 1rem;
}

.contacts__context {
  display: flex;
  justify-content: space-between;
}

.contacts__form {
  max-width: 591px;
  padding-top: 44px;
  padding-bottom: 21px;
}

.contacts__field {
  width: 100%;
  border: none;
  padding: 9px 13px 11px 15px;
  margin-bottom: 15px;
  background-color: #d6564f;
  border-radius: 5px;
  -moz-border-radius: 5px;
  -webkit-border-radius: 5px;
}
.contacts__field::placeholder {
  font-size: 1.2rem;
  line-height: 2.2rem;
  font-weight: 400;
  color: #f48c8f;
}

.contacts__textarea {
  height: 140px;
  letter-spacing: 0.019em;
  padding: 6px 14px 10px 13px;
}

.contact-information {
  max-width: 300px;
}

.contact-information__title {
  line-height: 1.8rem;
  font-weight: 900;
  color: #f0d8d9;
  padding-top: 45px;
  letter-spacing: 0.02em;
}

.contact-information__description {
  font-size: 1.2rem;
  line-height: 22px;
  padding-top: 10px;
  text-align: justify;
  letter-spacing: -0.01rem;
  padding-bottom: 20px;
  color: #ffffff;
}

.contact {
  display: flex;
  justify-content: stretch;
  align-items: baseline;
}

.contact__link {
  font-size: 1.2rem;
  line-height: 2.2rem;
  font-weight: 400;
  margin-left: 9px;
  color: #f0d8d9;
}

.ico {
  display: inline-block;
  cursor: pointer;
}

.ico_location {
  background-image: url(assets/images/icons/map.svg);
  width: 7px;
  height: 11px;
  margin-left: 3.5px;
}

.ico_phone {
  background-image: url(assets/images/icons/tel.svg);
  width: 11px;
  height: 11px;
}

.ico_mail {
  background-image: url(assets/images/icons/mail.svg);
  width: 13px;
  height: 8px;
}

.footer {
  background-color: #2D303A;
  height: 75px;
}

.footer__wrapper {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.footer__copyright {
  font-size: 1.2rem;
  font-weight: 400;
  color: #666d89;
  padding: 3rem;
  padding-left: 4rem;
  letter-spacing: -0.1pt;
}

.footer__links {
  margin-right: 35px;
  margin-top: 5px;
  display: flex;
}

.footer__icon {
  margin-right: 0.7rem;
}

button {
  padding: 0;
  font: inherit;
  cursor: pointer;
  color: inherit;
  background-color: transparent;
  border: none;
}

.header__burger {
  display: none;
  position: absolute;
  left: 20px;
  top: 26px;
  z-index: 9998;
  width: 25px;
  height: 20px;
  background-color: transparent;
  background-image: url("assets/images/icons/burger.svg");
  background-repeat: no-repeat;
  background-size: cover;
  transition: transform 0.5s ease;
  -moz-transition: transform 0.5s ease;
  -webkit-transition: transform 0.5s ease;
}

.rotated90 {
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
}

.dark-background {
  position: absolute;
  z-index: 9996;
  width: 100vw;
  height: 100vh;
  background: #2D303A;
  opacity: 0.6;
  transition: opacity 0.5s ease;
  -moz-transition: opacity 0.5s ease;
  -webkit-transition: opacity 0.5s ease;
  cursor: pointer;
}

.transparent {
  pointer-events: none;
  opacity: 0;
}

.slider {
  max-height: 68.1vw;
  box-sizing: border-box;
  position: relative;
  overflow: hidden;
  background-color: #F06C64;
  border-bottom: 6px solid #EA676B;
  transition: all 0.5s ease;
  -moz-transition: all 0.5s ease;
  -webkit-transition: all 0.5s ease;
}

main > .blue {
  background-color: #648bf0;
  border-bottom: 6px solid #648bf0;
}
/* ... */

